fix: remove flexbox bug on safari

--- a/src/styles/layout/header.module.scss
+++ b/src/styles/layout/header.module.scss
@@ -9,8 +9,9 @@
 	user-select: none;
 	
 	.logo {
-		margin: auto 2.5rem auto 0;
-		max-height: 37.5px;
+		margin-right: 2.5rem;
+		
+		img {width: 135px;}
 	}
 	
 	.menu, .sign {
